fix: perfect alignment w/ chat panel

--- a/app/stylus/mutants-layout.styl
+++ b/app/stylus/mutants-layout.styl
@@ -1293,7 +1293,7 @@ html.admin
 //{{{ - forum
 html.forum
   .main-content
-    margin-top 40px
+    margin-top 44px
     opacity 1
     transition opacity .05s ease-out
     &.transparent
